--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@sentry/nextjs": "^9.18.0",
     "@tanstack/react-table": "^8.20.1",
     "@uploadthing/react": "^6.7.2",
     "axios": "^1.7.3",
